# ithaca-legacy

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json
app/cli/: main.cpp
app/gui/: app_context.cpp  app_context.h  layout.h  log_subscriber.cpp  log_subscriber.h  main.cpp  master_page.h  panel_bank.cpp  panel_bank.h  panel_config.cpp  panel_config.h  panel_diag.cpp  panel_diag.h  panel_dsp.cpp  panel_dsp.h  panel_indicators.cpp  panel_indicators.h  panel_keyboard.cpp  panel_keyboard.h  panel_log.cpp  panel_log.h  panel_params.cpp  panel_params.h  panel_topbar.cpp  panel_topbar.h  persistence.cpp  persistence.h  resonance_page.h  theme.h  voice_page.h  widgets.h
docs/: bank-format-legacy.md  bank-format-packed.md  bank-format-proposed.md  config-file.md  raspberry-pi-5.md  review-2026-06-10.md  rt-thread-priority.md
docs/reference/: 00-overview.md  A-core.md  B-events.md  C-buffers.md  D-polyphony.md  E-resonance.md  F-loader.md  G-dsp.md  H-gui.md  I-multithreading.md
docs/superpowers/plans/: 2026-05-29-faze1-skeleton-build.md  2026-05-29-faze2-loader-bank-index.md  2026-05-29-faze3-voice-engine-playback.md  2026-05-30-faze4-streaming.md  2026-05-30-faze5-pedal-rezonance.md  2026-05-31-faze8-gui-hybrid-mvp.md  2026-06-01-dsp-chain-config.md  2026-06-01-eof-deadcode-cleanup.md  2026-06-01-eof-declick-fade.md  2026-06-01-gui-art-deco-redesign.md  2026-06-01-gui-log-level.md  2026-06-01-streamed-linear-interpolation.md  2026-06-02-buffer-latency.md  2026-06-02-dual-stream-pools.md  2026-06-02-resonance-partial-coincidence.md  2026-06-02-resonance-ram-cache.md  2026-06-02-resonance-velocity-layer.md  2026-06-03-convolver-cabinet.md  2026-06-03-enhancer-dynamic.md  2026-06-10-async-loader-a-stream-refactor.md  2026-06-10-revize-mitigace.md  2026-06-11-packed-soundbank.md
docs/superpowers/specs/: 2026-05-29-ithaca-legacy-design.md  2026-05-31-ithaca-legacy-gui-f8-design.md  2026-06-01-dsp-chain-config-design.md  2026-06-01-eof-deadcode-cleanup-design.md  2026-06-01-eof-declick-fade-design.md  2026-06-01-gui-art-deco-redesign-design.md  2026-06-01-gui-log-level-design.md  2026-06-01-streamed-linear-interpolation-design.md  2026-06-02-buffer-latency-design.md  2026-06-02-dual-stream-pools-design.md  2026-06-02-resonance-partial-coincidence-design.md  2026-06-02-resonance-ram-cache-design.md  2026-06-02-resonance-velocity-layer-design.md  2026-06-03-bbe-dynamic-design.md  2026-06-03-convolver-cabinet-design.md  2026-06-10-async-loader-a-stream-refactor-design.md  2026-06-10-packed-soundbank-design.md
engine/: engine.cpp  engine.h  miniaudio_impl.cpp
engine/dsp/: agc.cpp  agc.h  bbe.cpp  bbe.h  convolver.cpp  convolver.h  dsp_chain.cpp  dsp_chain.h  dsp_math.h  dsp_stage.h  enhancer.cpp  enhancer.h  ir_modal.cpp  ir_modal.h  ir_wav.cpp  ir_wav.h  limiter.cpp  limiter.h
engine/io/: audio_device.cpp  audio_device.h  file_handle.cpp  file_handle.h  sample_read.cpp  sample_read.h  wav_reader.cpp  wav_reader.h  wav_writer.cpp  wav_writer.h
engine/midi/: midi_input.cpp  midi_input.h  midi_queue.h  note_hold.h
engine/pedal/: pedal_state.cpp  pedal_state.h
engine/render/: batch_renderer.cpp  batch_renderer.h
engine/resonance/: harmonic_proximity.cpp  harmonic_proximity.h  resonance_engine.cpp  resonance_engine.h  resonance_layer_select.cpp  resonance_layer_select.h
engine/sample/: bank_index.cpp  bank_index.h  ithaca_bank.cpp  ithaca_bank.h  ithaca_format.cpp  ithaca_format.h  sample_loader.cpp  sample_loader.h  sample_store.cpp  sample_store.h  sample_types.h
engine/stream/: stream_engine.cpp  stream_engine.h  streamed_reader.cpp  streamed_reader.h
engine/util/: denormals.h  log.cpp  log.h  rt_priority.cpp  rt_priority.h  sha256.cpp  sha256.h  sysinfo.h  version.h
engine/voice/: _reserved_resampling.h  patch_manager.cpp  patch_manager.h  resonance_voice.cpp  resonance_voice.h  voice.cpp  voice.h  voice_pool.cpp  voice_pool.h
tests/: CMakeLists.txt  ithaca_test_blob.h  roundtrip_packed_bank.sh  test_bake_soundbank.py  test_bank_index.cpp  test_batch_renderer.cpp  test_convolver.cpp  test_dsp.cpp  test_engine.cpp  test_engine_diagnostics.cpp  test_enhancer_response.cpp  test_file_handle.cpp  test_harmonic_proximity.cpp  test_ir_modal.cpp  test_ir_wav.cpp  test_ithaca_bank.cpp  test_ithaca_format.cpp  test_log.cpp  test_log_subscriber.cpp  test_long_sample_stream.cpp  test_master_peak_meter.cpp  test_midi_channel.cpp  test_midi_queue.cpp  test_note_hold.cpp  test_packed_bank_load.cpp  test_packed_stream.cpp  test_patch_manager.cpp  test_pedal_state.cpp  test_persistence.cpp  test_render_regression.cpp  test_resonance_cache_build.cpp  test_resonance_engine.cpp  test_resonance_layer_select.cpp  test_resonance_stream_sr.cpp  test_sample_loader.cpp  test_sample_rate_and_reload.cpp  test_sample_read.cpp  test_sample_store.cpp  test_sha256.cpp  test_stream_engine.cpp  (+5 more)
tools/: bake_soundbank.py  fetch-third-party.sh  make_dynamic_bank.sh
